<resources>
    <string name="app_name">FOLLIEDIMOMI</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cancella">cancella i miei dati</string>
    <string name="indieizzo">INDIRIZZO FATTURAZIONE</string>
    <string name="elimina">ELIMINA IL MIO ACCOUNT</string>
    <string name="in_conformia">In conformità con il Regolamento generale sulla protezione dei dati (GDPR) dell\'UE, l\'utente ha il diritto di richiedere l\'anonimizzazione dei dati personali contenuti nel sito Web. Si prega di notare che questo processo è irreversibile e non può essere annullato.
Se sei sicuro di voler procedere con questo processo, puoi iniziare cliccando qui sotto.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Dev</string>
    <string name="nav_header_subtitle">dev@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>
    <string name="cancel">Annulla</string>
    <string name="login">Accedi</string>
    <string name="e_mail">E-mail</string>
    <string name="email">Indirizzo E-mail *</string>
    <string name="don_t_have_an_account_register_here">Non hai ancora un\'account? Registrati ora </string>
    <string name="already_have_an_account_login">Se già registrato? Accedi</string>
    <string name="back_to_login">Torna al login</string>
    <string name="category">Categoria</string>
    <string name="log_out">Esci</string>
    <string name="required">Campo Obbligatorio</string>
    <string name="error_please_enter_email">
        Inserisci indirizzo e-mail</string>
    <string name="error_please_enter_valid_email">Inserisci un indirizzo e-mail valido</string>
    <string name="error_please_enter_password">
        Inserisci password</string>
    <string name="error_password_length">Password length must be at least 6 character</string>
    <string name="hint_password">Password *</string>
    <string name="repeat_password">Ripeti la Password *</string>
    <string name="forgot_password">Hai dimenticato la password? </string>
    <string name="forgot_password_title">Password dimenticata</string>
    <string name="please_wait">Attendere Prego</string>
    <string name="sort">Ordina</string>
    <string name="cart">cart</string>
    <string name="search">Cerca</string>
    <string name="shopping_cart">Carrello</string>
    <string name="search_here">Scrivi qui…</string>
    <string name="filter">Filtra</string>
    <string name="sort_by">Ordina per</string>
    <string name="close_app">Chiudi App</string>
    <string name="are_you_sure_close_app">Sei sicuro di voler chiudere l\'app?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="total_discount">Totale Sconto</string>
    <string name="sub_total">Totale Prodotti</string>
    <string name="total_tax">Totale IVA</string>
    <string name="proceed">Procedi</string>
    <string name="your_cart_is_empty">Il tuo Carrello è vuoto</string>
    <string name="you_have_no_item_in_your_shopping_cart_please_add_items_to_continue">
        Il tuo carrello è vuoto. INIZIA LO SHOPPING!</string>
    <string name="continue_shopping">Continua lo shopping</string>
    <string name="continue_complete_payment">
        Procedi All`acquisto</string>
    <string name="complete_payment">Completa Pagamento</string>
    <string name="similar_products">Prodotti Simili</string>
    <string name="grand_total">Totale</string>
    <string name="total_amount">Totale Ordine</string>
    <string name="next">Avanti</string>
    <string name="you_don_t_have_any_order_history_at">
        Non hai effettuato ancora nessun ordine</string>
    <string name="you_don_t_have_any_address_add_address_to_complete_this_order">
        Non hai ancora inserito nessun indirizzo! Aggiungi prima il tuo indirizzo per completare l\'ordine</string>
    <string name="you_don_t_have_any_address_click_below_button_to_add_new_address">
        Nessun indirizzo trovato! Fare clic sul pulsante in basso per aggiungere un indirizzo</string>
    <string name="shipping_address">Indirizzo di Spedizione</string>
    <string name="billing_address">indirizzo di Fatturazione</string>
    <string name="api_error">Qualcosa è andato storto</string>
    <string name="select_valid_country">Seleziona una nazione valida</string>
    <string name="select_valid_state">Seleziona provincia</string>
    <string name="iva_escl">(iva escl.)</string>
    <string name="iva_incl">( incl. VAT.)</string>
    <string name="total_shipping">Costo spedizione</string>
    <string name="free_shipping">Spedizione Gratis</string>
    <string name="total_price">Prezzo Totale</string>
    <string name="enter_promotion_code_here">
        Inserisci codice coupon</string>
    <string name="apply">Applica</string>
    <string name="description">Descrizione</string>
    <string name="date_label">Data : </string>
    <string name="reference_label">Riferimento : </string>
    <string name="order_number_label">Ordine N. : </string>
    <string name="addresses">Rubrica Indirizzi</string>
    <string name="personal_information">Informazioni Personali</string>
    <string name="vouchers">Coupon</string>
    <string name="your_wish_lists">Your Wish Lists</string>
    <string name="gift_cards">Gift Cards</string>
    <string name="returns_manager">Sezione Resi</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Cognome</string>
    <string name="company">Azienda</string>
    <string name="phone">Telefono</string>
    <string name="update_profile">Aggiorna Profilo</string>
    <string name="surname">Cognome </string>
    <string name="date_of_birth">Data di Nascita</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">Nuova password</string>
    <string name="confirm_password">Conferma password</string>
    <string name="order_history_details">
        <![CDATA[Storico Ordini]]></string>
    <string name="update">Aggiorna</string>
    <string name="delete">Elimina</string>
    <string name="faq">Faq</string>
    <string name="selfies">Selfies</string>
    <string name="contact_lenses">Contact Lenses</string>
    <string name="prescription_glasses">LENTI GRADUATE</string>
    <string name="outlet">OUTLET</string>
    <string name="accessory">ACCESSORI</string>
    <string name="kids">KIDS</string>
    <string name="sartorial_glasses">OCCHIALE SARTORIALE</string>
    <string name="for_him">PER LUI</string>
    <string name="for_her">PER LEI</string>
    <string name="da_sole">&#160;&#160;&#160;&#160;&#160;DA SOLE</string>
    <string name="lenti_nature">&#160;&#160;&#160;&#160;&#160;LENTI NEUTRE</string>
    <string name="lenti_graduate">&#160;&#160;&#160;&#160;&#160;LENTI GRADUATE</string>
    <string name="bambino">&#160;&#160;&#160;&#160;&#160;BAMBINO</string>
    <string name="bambina">&#160;&#160;&#160;&#160;&#160;BAMBINA</string>
    <string name="catenine">&#160;&#160;&#160;&#160;&#160;CATENINE</string>
    <string name="custodie">&#160;&#160;&#160;&#160;&#160;CUSTODIE</string>
    <string name="spray">&#160;&#160;&#160;&#160;&#160;SPRAY</string>
    <string name="home">Home</string>
    <string name="new_arrivals">NEW ARRIVALS</string>
    <string name="my_account">Il mio account</string>
    <string name="choose_address">Scegli l\'indirizzo</string>
    <string name="open_size_chart">Open size chart</string>
    <string name="credit_notes">I miei Ordini</string>
    <string name="order_tracking">Traccia il mio pacco</string>
    <string name="availavle">Articoli</string>
    <string name="customize">Personalizza</string>
    <string name="record_not_available">Record non disponibile</string>
    <string name="not_found">Non Trovato</string>
    <string name="label_total_price">Totale Prezzo : </string>
    <string name="label_qty">Quantità : </string>
    <string name="label_price">Prezzo : </string>
    <string name="alias">Alias</string>
    <string name="address_one">Indirizzo</string>
    <string name="addresstwo">Nome negozio o Cognome al citofono</string>
    <string name="city">Città</string>
    <string name="state">Provincia</string>
    <string name="country">Nazione</string>
    <string name="postcode">Codice postale</string>
    <string name="mobile">Cellulare</string>
    <string name="mobile_home">Telefono di casa</string>
    <string name="vat_number">Partita IVA</string>
    <string name="add_address">Aggiungi Indirizzo</string>
    <string name="does_not_have_any_state">la nazione selezionata non ha alcuna provincia</string>
    <string name="different_billing_address">Indirizzo di fatturazione diverso?</string>
    <string name="review_order">Rivedi Ordine</string>
    <string name="carrier_info">Carrier info</string>
    <string name="label_delay">Delay :</string>
    <string name="label_info">Info:</string>
    <string name="my_personal_information">
        Informazioni Personali</string>
    <string name="order_history_and_detail">Storico Ordini</string>
    <string name="my_credit_slip">Traccia il mio pacco</string>
    <string name="my_addresses">Rubrica Indirizzi</string>
    <string name="my_voucher">Coupon</string>
    <string name="it_seems_you_don_t_have_any_order_history_at">
        Sembra che tu non abbia alcuna cronologia degli ordini a</string>
    <string name="personalizza_la_tua_lente">personalizza la tua lente</string>
    <string name="choose_colors">Seleziona colore</string>
    <string name="conferma">CONFERMA</string>
    <string name="fag_guide"><![CDATA[FAG & GUIDE]]></string>
    <string name="metodo_di_pagamento">METODO DI PAGAMENTO</string>
    <string name="condizioni_newsletter">CONDIZIONI NEWSLETTER</string>
    <string name="termini_e_codizioni">TERMINI E CODIZIONI</string>
    <string name="a_proposito_di_cipri_couture">A PROPOSITO DI CIPRI-COUTURE</string>
    <string name="lenti_da_riposo_correttive_sotto_prescrizione_medica_sono_occhiali_correttivi_con_effetto_riposante_per_il_sistema_visivo">Uso indicato nei periodi di stress visivo (esempio lettura di un libro)</string>
    <string name="antiriflesso_incluso">(Antiriflesso incluso)</string>
    <string name="lenti_da_riposo_distanza">LENTI PER RIPOSO/LETTURA
        </string>
    <string name="costo_30_00">costo € 30,00</string>
    <string name="costo_25_00">costo € 60,00</string>
    <string name="sf_sinistra">SF SINISTRA</string>
    <string name="sf_destra">SF DESTRA</string>
    <string name="lenti_per_lettura_presbiopia">LENTI CORRETTIVE PER GRADAZIONI MEDIE</string>
    <string name="ditta">Ditta</string>
    <string name="register">Registrati</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="indirizzo_e_mail">Indirizzo e-mail</string>
    <string name="informazioni_aggiuntive">Informazioni aggiuntive</string>
    <string name="cap">Cap</string>
    <string name="citta">Citta</string>
    <string name="italian_telephono">Telefono</string>
    <string name="codice_fiscale">Codice Fiscale</string>
    <string name="altre_informazioni">Altre informazioni</string>
</resources>