<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".fragment.AddAddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <!--app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.normal"-->

        <!--Alias-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telAlias"
            style="@style/AppTextInputLayout"
            android:hint="@string/alias"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAlias"
                style="@style/AppEditText"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--First name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telFirstName"
            style="@style/AppTextInputLayout"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                style="@style/AppEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Last name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telLastName"
            style="@style/AppTextInputLayout"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                style="@style/AppEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Identification Number:*-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telIdentification"
            style="@style/AppTextInputLayout"
            android:hint="@string/codice_fiscale">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etIdentificationNumber"
                style="@style/AppEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Company-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telCompany"
            style="@style/AppTextInputLayout"
            android:hint="@string/company">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCompany"
                style="@style/AppEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Vat Number-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telVatNumber"
            style="@style/AppTextInputLayout"
            android:hint="@string/vat_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etVatNumber"
                style="@style/AppEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--AddressOne-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telAddressOne"
            style="@style/AppTextInputLayout"
            android:hint="@string/address_one">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddressOne"
                style="@style/AppEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--AddressTwo - hide-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telAddressTwo"
            style="@style/AppTextInputLayout"
            android:hint="@string/addresstwo"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddressTwo"
                style="@style/AppEditText"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Pin-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telPostCode"
            style="@style/AppTextInputLayout"
            android:hint="@string/postcode">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPostCode"
                style="@style/AppEditText"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--City-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telCity"
            style="@style/AppTextInputLayout"
            android:hint="@string/city">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCity"
                style="@style/AppEditText"
                android:imeOptions="actionDone" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Country-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telCountry"
            style="@style/AppTextInputLayout"
            android:hint="@string/country"
            android:inputType="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCountry"
                style="@style/AppEditText"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--State-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telState"
            style="@style/AppTextInputLayout"
            android:hint="@string/state"
            android:inputType="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etState"
                style="@style/AppEditText"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Phone-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telPhone"
            style="@style/AppTextInputLayout"
            android:hint="@string/mobile_home">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                style="@style/AppEditText"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Mobile-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telMobile"
            style="@style/AppTextInputLayout"
            android:hint="@string/mobile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobile"
                style="@style/AppEditText"
                android:imeOptions="actionDone"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Address Title-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telAddressTitle"
            style="@style/AppTextInputLayout"
            android:hint="@string/addresstwo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddressTitle"
                style="@style/AppEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Other Information-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telAddressOtherInformation"
            style="@style/AppTextInputLayout"
            android:hint="@string/altre_informazioni">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddressOtherInformation"
                style="@style/AppEditText"
                android:imeOptions="actionDone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnAddAddress"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/ic_launcher_background"
            android:gravity="center"
            android:text="@string/add_address"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>